Add launcher workaround for JDK unsafe warnings